--- a/25-11-2018-homework/test_input.in
+++ b/25-11-2018-homework/test_input.in
@@ -1,3 +1,26 @@
-1 2 3; 42 5 6; 31 48 9
+15 2 7; 42 18 6; 31 48 9
 medians
+ordered:true.show
+ordered:false.show
+mul:4.show
+ghdfhfdsh
+add:5.show
+show
+size
+averages
+medians
+sums
+sizes
+begin.show
+begin.next.show
+begin.at:2
+begin.jdfhjd
+begin.at:3
+begin.size
+begin.average
+begin.median
+begin.sum
+begin.ordered:true
+begin.ordered:false
 quit
+
